# gptapi

./: .dockerignore  .gitignore  DROPALL.sql  Dockerfile  Makefile  README.MD  main.py  pyproject.toml  sample.txt  setup.py  test2.py  test3.py  todolist.md
db/: __init__.py  instance.py
db/interfaces/: __init__.py  drive.py  embedding.py  embedding_db.py  user.py
db/migrations/: env.py
db/migrations/versions/: 142ac8510688_.py  1805441597b7_.py  1f5f960af83e_.py  52181fa45150_.py  80133d362dd9_.py  937099ed054b_.py  966888132bfd_.py  9f405dc58e0d_.py  c52b8a9c49af_.py  d80cf30b88c3_.py  f943091303a7_.py  f9bf76b38db9_.py
db/mixins/: __init__.py
db/models/: __init__.py  embeddings.py  users.py
db/relational/: __init__.py  instance.py  interfaces.py  mixins.py  models.py
db/relational/migrations/: env.py
log/: __init__.py  config.json  formatters.py  handlers.py
routes/: __init__.py  base.py  bot.py  db_routes.py  drive.py  gpt.py  pages.py
services/: _interfaces.py  drive_db.py  emb.py  llm_db.py
services/db/: __init__.py  _embedding.py  _interfaces.py  _relational.py  db_services.py  embedding.py  relational.py
services/drive/: .gdrive.py.swp  __init__.py  gdrive.py  instance.py
services/llm/: __init__.py  database.py  llm.py  preprocessing.py
services/llm/db/: __init__.py  instance.py
static/: __init__.py
static/bot_webapps/: main.js  styles.css  template.html
static/bot_webapps/change_history_limit/: index.html  index.js  (+1 more)
static/css/: history.css  temperature.css
static/js/: history.js  temperature.js
views/: __init__.py
(+13 files in other folders)
